Update GitHub Actions workflow: modernize actions and improve caching logic
- Updated actions versions (`actions/checkout@v4`, `actions/setup-go@v5`, `actions/cache@v4`).
- Switched to using `go-version-file` for consistent Go versioning from `go.mod`.
- Improved caching key logic to fix macOS globbing issues.

--- a/.github/workflows/go-vet.yml
+++ b/.github/workflows/go-vet.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   static-analysis:
-    # 定义矩阵的值，指定不同的平台
+    # Define matrix values to specify different platforms
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
@@ -24,20 +24,22 @@ jobs:
 
     steps:
       - name: Check out repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: '1.25'
+          # Track Go version from the module file for consistency across environments
+          go-version-file: 'go.mod'
 
       - name: Cache Go modules
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          # Use a stable hash of the root go.sum to avoid macOS globbing issues
+          key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
 
